# emergency-management-tools

./: .editorconfig  .envrc  .gitignore  .gitlint  .kodiak.toml  .pre-commit-config.yaml  CODING.md  LICENSE  README.md  _config.yml  bump-nixpkgs.bash  index.markdown  nixpkgs.json  nixpkgs.nix  poetry2nix.nix  pyproject.toml  python.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: jekyll-gh-pages.yml  test.yml
flooding/Sentinel2_Water_Extraction/: README.md  Sentinel2_Water_Extraction.ipynb  bump-nixpkgs.bash  nixpkgs.json  poetryEnv.nix  poetryPackages.nix  pyproject.toml  requirements.txt  shell.nix
flooding/sentinel1_water_extraction/: README.md  poetryPackages.nix  pyproject.toml  sentinel1_water_extraction.ipynb  shell.nix
flooding/sentinel2_water_extraction/: .envrc  CODING.md  README.md  poetryPackages.nix  pyproject.toml  sentinel2_water_extraction.ipynb  shell.nix
machine-readable-to-human-readable-date-time/: .envrc  human-readable-local-date-time.mjs  index.md  shell.nix
machine-readable-to-human-readable-date-time/test/: human-readable-local-date-time.spec.mjs  index.html  mocha.css  mocha.js
nix/: sources.json
sentinel2-image-processing/: prepare_10m_sentinel_imagery.py
sentinel2-processing/: nz-150k-tile-index.dbf  nz-150k-tile-index.shp  nz-150k-tile-index.shx
