[tool.poetry]
name = "sentinel2_water_extraction"
version = "0.1.0"
description = ""
authors = [
    "Matthew Wightman <mawightman@linz.govt.nz>",
    "Simon Planzer <splanzer@linz.govt.nz>",
    "Victor Engmark <vengmark@linz.govt.nz>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gdal = "3.4.2"
geopandas = "*"
jupyter = "*"
matplotlib = "*"
numpy = "*"
rasterio = "*"
rio-tiler = "*"
sat-search = "*"
shapely = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
