[tool.poetry]
name = "sentinel1-water-extraction"
version = "0.1.0"
description = ""
authors = [
    "Matthew Wightman <mawightman@linz.govt.nz>",
    "Victor Engmark <vengmark@linz.govt.nz>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gdal = "*"
jupyterlab = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
