[tool.poetry]
name = "sentinel2_water_extraction"
version = "0.1.0"
description = ""
authors = [
    "Matthew Wightman <mawightman@linz.govt.nz>",
    "Simon Planzer <splanzer@linz.govt.nz>",
    "Victor Engmark <vengmark@linz.govt.nz>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gdal = "3.6.2"
geopandas = "*"
jupyter = "*"
matplotlib = "*"
rio-tiler = "*"
sat-search = "*"
shapely = "<3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
